add/edit input boxes expand, readme file finished

--- a/add_recipe/view.html
+++ b/add_recipe/view.html
@@ -9,15 +9,15 @@
         <h1>Add recipe</h1>
         <form method = "post">
             <label>title:</label><br>
-            <input type = "text" name = "title"><br><br>
+            <input type = "text" name = "title" oninput="this.size = this.value.length"><br><br>
             <div id = "ingredient">
                 <label>ingredients:</label><br>
-                <input type = "text" name = "ingredient_0"><br><br>
+                <input type = "text" name = "ingredient_0" oninput="this.size = this.value.length"><br><br>
             </div>
             <button type="button" onclick = add_ingredient()>add ingredient</button><br><br>
             <div id = "preperation">
                 <label>preperation:</label><br>
-                <input type = "text" name = "step_0"><br><br>
+                <input type = "text" name = "step_0" oninput="this.size = this.value.length"><br><br>
             </div>
             <button type="button" onclick = add_prep_step()>add preparation step</button><br><br>
             <input type = "submit" value = "submit">
