link manegment fix

--- a/login/view.html
+++ b/login/view.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>login</title>
-        <link rel="stylesheet" href="/sources/style.css">
+        <link rel="stylesheet" href="../sources/style.css">
     </head>
     <body class="registerbody">  
         <div id = "registration_page">
