--- a/register/view.html
+++ b/register/view.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>register</title>
-        <link rel="stylesheet" href="/sources/style.css"> 
+        <link rel="stylesheet" href="../sources/style.css"> 
     </head>
     <body class="registerbody">  
         <div id = "registration_page">
@@ -30,7 +30,7 @@
                         <div class="btn-container">
                             <input class="btn" type="submit" value="Submit"/>
                             <div class="acc-text">Already have an account?
-                            <a style = "color: blue; cursor: pointer;" href="/login/"> Login</a>
+                            <a style = "color: blue; cursor: pointer;" href="../login/"> Login</a>
                         </div>
                     </form>
                 </div>
