--- a/favorites/index.html
+++ b/favorites/index.html
@@ -6,7 +6,7 @@
     <title>Favorites</title>
 </head>
 <body>
-    <h1>Favorites</h1><br>
+    <h1>Favorites</h1>
     <ul id = "favorites">
     </ul>
     <a href = "/recipes/">recipes</a>
