removed recipes css

--- a/head.html
+++ b/head.html
@@ -16,5 +16,5 @@
             <a href="*">TEAM</a>
             <a href="*">CONTACTS</a>
         </nav>
-            <button class="btn-signin1">Sign In</button>
+            <button>Sign In</button>
     </header>
